Add local Fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Aqui va description" />
     <title>Jeison Garzón Portafolio</title>
   </head>
-  <body class="bg-black text-white container mx-auto pt-10 px-7">
+  <body class="bg-black text-white container mx-auto pt-10 lg:pt-14  px-7">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
