--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/JeisonGarzónLogotipo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Aqui va description" />
+    <meta name="description" content="Diseño y desarrollo soluciones digitales y sitios web 100% rápidos, accesibles, visualmente estéticos y funcionales, con excelente usabilidad y optimización SEO." />
     <title>Jeison Garzón Portafolio</title>
   </head>
-  <body class="bg-black text-white container mx-auto pt-10 lg:pt-14  px-7">
+  <body class="bg-black text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
