--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/JeisonGarzónLogotipo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Diseño y desarrollo soluciones digitales y sitios web 100% rápidos, accesibles, visualmente estéticos y funcionales, con excelente usabilidad y optimización SEO." />
-    <title>Jeison Garzón Portafolio</title>
+    <title>Jeison Garzón</title>
   </head>
   <body class="bg-black text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
     <div id="root"></div>
