Circle Cursor Add

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <body class="bg-black text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   </body>
 </html>
