Change some texts & improve dark mode color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jeison Garzón</title>
     <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/JeisonGarzónLogotipo.svg" />
   </head>
-  <body class="bg-black text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
+  <body class="bg-[#121212] text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
