--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Diseño y desarrollo soluciones digitales y sitios web 100% rápidos, accesibles, visualmente estéticos y funcionales, con excelente usabilidad y optimización SEO." />
-    <title>Jeison Garzón</title>
-    <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/JeisonGarzónLogotipo.svg" />
-  </head>
-  <body class="bg-[#121212] text-white container mx-auto pt-10 lg:pt-14 px-7 relative">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Diseño y desarrollo soluciones digitales y sitios web 100% rápidos, accesibles, visualmente estéticos y funcionales, con excelente usabilidad y optimización SEO." />
+  <title>Jeison Garzón</title>
+  <link rel="icon" type="image/svg+xml" href="/src/assets/imgs/JeisonGarzónLogotipo.svg" />
+</head>
+
+<body class="bg-[#121212] text-white container mx-auto py-14 px-7 lg:pt-14 relative h-screen">
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
