--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body
   class="bg-[#121212] text-white/90 container mx-auto py-14 px-7 lg:pt-14 relative h-screen dark:bg-white dark:text-stone-800">
+  <div id="loader"></div>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
